--- a/src/components/Privacy/privacy.scss
+++ b/src/components/Privacy/privacy.scss
@@ -35,8 +35,10 @@
 }
 
 .reset-account-modal {
-  height: 60%;
-  width: 80%;
+  min-height: 60%;
+  max-height: 70%;
+  min-width: 60%;
+  max-width: 80%;
   border-radius: 12px;
   display: flex;
   justify-content: center;
@@ -75,45 +77,50 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: baseline;
   margin: 0.5rem;
 }
 
 // ids
 
 #titulo-modal {
-  margin: 1rem;
   font-weight: 600;
   font-size: 2rem;
   text-align: center;
 }
 
 #alerta-reset {
-  padding: 0.8rem;
   font-size: 1rem;
-  margin: 0.8rem;
+  margin: 1rem;
+  text-align: justify;
   word-wrap: break-word;
   word-break: break-word;
 }
 
 @media screen and (min-width: 700px) {
   .reset-account-modal {
-    height: 70%;
-    width: 50%;
+    min-width: 40%;
+    max-width: 50%;
   }
 
   .icones-apagar-conta-privacy {
-    font-size: 7rem;
+    font-size: 6rem;
   }
 
   .icone-warning-privacy {
-    font-size: 9rem;
+    font-size: 8rem;
   }
 
   #alerta-reset {
-    padding: 1rem;
     font-size: 1.5rem;
-    margin: 1rem;
+    margin: 1.4rem;
     word-wrap: break-word;
     word-break: break-word;
+  }
+}
+
+@media screen and (max-height: 700px) {
+  .reset-account-modal {
+    max-height: 85%;
   }
 }
